Markup for table-list

--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -22,3 +22,9 @@
 @import "tables";
 @import "lists";
 @import "buttons";
+
+@import "layout";
+
+@import "table-list";
+@import "avatars";
+@import "tags";
