--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -23,6 +23,7 @@ $base-spacing: $base-line-height * 1em;
 $base-z-index: 0;
 
 // Colors
+$red: #e53c3c;
 $blue: #477DCA;
 $dark-gray: #333;
 $medium-gray: #999;
