--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
 </head>
 <body ng-app="prTool">
   <%= render "flashes" -%>
-  <%= yield %>
+  <main>
+    <%= yield %>
+  </main>
   <%= render "javascript" %>
 </body>
 </html>
