--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,3 +5,9 @@
 @import 'base/grid-settings';
 @import 'neat';
 @import 'base/base';
+
+@import "avatars";
+@import "comment-count";
+@import "layout";
+@import "table-list";
+@import "tags";
