--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -15,6 +15,7 @@
 @import "extends/errors";
 @import "extends/flashes";
 @import "extends/hide-text";
+@import "extends/typography";
 
 // Typography and Elements
 @import "typography";
@@ -22,9 +23,3 @@
 @import "tables";
 @import "lists";
 @import "buttons";
-
-@import "layout";
-
-@import "table-list";
-@import "avatars";
-@import "tags";
