--- a/app/views/pull_requests/index.html.erb
+++ b/app/views/pull_requests/index.html.erb
@@ -1,5 +1,38 @@
-<div>
-  <ul class="table-list">
-    <%= render pull_requests %>
-  </ul>
-</div>
+<header class="page-header">
+  <div class="container">
+    <h1>PRs</h1>
+  </div>
+</header>
+
+<section class="slice">
+  <div class="container">
+    <ol class="tags">
+      <li>
+        <a class="tag ember" href="#">
+          Ember
+          <span class="tag-badge">3</span>
+        </a>
+      </li>
+      <li>
+        <a class="tag angular" href="#">
+          Angular
+          <span class="tag-badge">3</span>
+        </a>
+      </li>
+      <li>
+        <a class="tag design" href="#">
+          Design
+          <span class="tag-badge">3</span>
+        </a>
+      </li>
+    </ol>
+  </div>
+</section>
+
+<main>
+  <div class="container">
+    <ol class="table-list">
+      <%= render pull_requests %>
+    </ol>
+  </div>
+</main>
