--- a/app/views/pull_requests/index.html.erb
+++ b/app/views/pull_requests/index.html.erb
@@ -1,24 +1,5 @@
 <div>
   <ul class="table-list">
-    <li class="table-list-item">
-      <div class="table-list-cell">
-        <img src="https://s3.amazonaws.com/uifaces/faces/twitter/csswizardry/128.jpg" alt="creuter" class="avatar">
-      </div>
-
-      <div class="table-list-cell description">
-        <a class="title" href="#">Implement Stuff</a>
-        <a class="subtitle" href="#">thoughtbot/sportcoat-hypodermic</a>
-        <span class="meta">#44 opened 23 hours ago by <a href="#">JoelQ</a></span>
-      </div>
-
-      <div class="table-list-cell">
-        <span class="tag ember">Ember</span>
-      </div>
-
-      <div class="table-list-cell">
-        <%= embedded_svg "svg/comment.svg" %>
-        <span>1</span>
-      </div>
-    </li>
+    <%= render pull_requests %>
   </ul>
 </div>
