--- a/app/views/pull_requests/index.html.erb
+++ b/app/views/pull_requests/index.html.erb
@@ -7,6 +7,11 @@
 <section class="slice">
   <div class="container">
     <ol class="tags">
+      <li>
+        <span class="slice-title">
+          Filter:
+        </span>
+      </li>
       <%= render tags %>
     </ol>
   </div>
