--- a/app/views/tags/_tag.html.erb
+++ b/app/views/tags/_tag.html.erb
@@ -1,5 +1,5 @@
 <li>
-  <a class="tag <%= tag.name %>" href="dummy">
+  <a class="tag-toggle <%= tag.name %> dummy" href="#">
     <%= tag.name.titleize %>
     <span class="tag-badge dummy">3</span>
   </a>
