Display real tags, and only active tags/prs on the index page

--- a/app/views/pull_requests/index.html.erb
+++ b/app/views/pull_requests/index.html.erb
@@ -7,24 +7,7 @@
 <section class="slice">
   <div class="container">
     <ol class="tags">
-      <li>
-        <a class="tag ember" href="#">
-          Ember
-          <span class="tag-badge">3</span>
-        </a>
-      </li>
-      <li>
-        <a class="tag angular" href="#">
-          Angular
-          <span class="tag-badge">3</span>
-        </a>
-      </li>
-      <li>
-        <a class="tag design" href="#">
-          Design
-          <span class="tag-badge">3</span>
-        </a>
-      </li>
+      <%= render tags %>
     </ol>
   </div>
 </section>
