Users can filter visible pull requests by tag

--- a/app/views/tags/_tag.html.erb
+++ b/app/views/tags/_tag.html.erb
@@ -1,6 +1,6 @@
 <li>
-  <a class="tag-toggle <%= tag.name %> dummy" href="#">
+  <%= link_to(toggle_tag_on_path(tag.name), class: ["tag-toggle", tag.name]) do %>
     <%= tag.name.titleize %>
     <span class="tag-badge dummy">3</span>
-  </a>
+  <% end %>
 </li>
