--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,7 +8,9 @@
 
 @import "avatars";
 @import "comment-count";
+@import "content";
 @import "layout";
+@import "page-header";
 @import "slice";
 @import "table-list";
 @import "tags";
