--- a/app/views/pull_requests/index.html.erb
+++ b/app/views/pull_requests/index.html.erb
@@ -1,7 +1,6 @@
 <header class="page-header">
-  <div class="container">
-    <h1>PRs</h1>
-  </div>
+  <h1>PRs</h1>
+  <%= link_to "Getting Started?", page_path("setup") %>
 </header>
 
 <section class="slice">
