--- a/app/views/pages/setup.html.erb
+++ b/app/views/pages/setup.html.erb
@@ -1,8 +1,10 @@
 <div class="page-header">
-  <h1>Getting Started</h1>
-  <%= link_to root_url do %>
-    Back to Home &rarr;
-  <% end %>
+  <div class="container">
+    <h1>Getting Started</h1>
+    <%= link_to root_url do %>
+      Back to Home &rarr;
+    <% end %>
+  </div>
 </div>
 
 <div class="slice">
