--- a/app/assets/stylesheets/_page-header.scss
+++ b/app/assets/stylesheets/_page-header.scss
@@ -1,9 +1,12 @@
 .page-header {
-  @include align-items(center);
-  @include display(flex);
-  @include justify-content(space-between);
-  @include outer-container;
   @include padding(1em null);
+  background: $blue;
+
+  .container {
+    @include align-items(center);
+    @include display(flex);
+    @include justify-content(space-between);
+  }
 
   h1 {
     @include flex(1);
