--- a/app/views/pages/setup.html.erb
+++ b/app/views/pages/setup.html.erb
@@ -17,7 +17,7 @@
     <ol class="instructions">
       <li>Visit <code>https://github.com/$ORGANIZATION/$REPO/settings/hooks/new</code>.</li>
       <li>Enter <code><%= ENV["PAYLOAD"] %></code> for the Payload URL.</li>
-      <li>Enter <code><%= ENV["SECRET"] %></code> for the secret.</li>
+      <li>Enter <code><%= ENV["GITHUB_SECRET_KEY"] %></code> for the secret.</li>
       <li>Select <code>Send me everything</code>, and submit.</li>
     </ol>
   </section>
