Show the correct user_name and avatar_url

--- a/app/views/pull_requests/_pull_request.html.erb
+++ b/app/views/pull_requests/_pull_request.html.erb
@@ -1,6 +1,10 @@
 <li class="table-list-item">
   <div class="table-list-cell">
-    <img src="https://s3.amazonaws.com/uifaces/faces/twitter/csswizardry/128.jpg" alt="creuter" class="avatar dummy">
+    <img
+       src="<%= pull_request.avatar_url %>"
+       alt="<%= pull_request.user_name %>"
+       class="avatar"
+    >
   </div>
 
   <div class="table-list-cell stacked">
