--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -41,8 +41,9 @@ $green: #4ab471;
 $yellow: #f3ae4e;
 $pink: #d96383;
 
-// Background Color
+// Background Colors
 $base-background-color: white;
+$tag-fallback-color: $purple;
 
 // Font Colors
 $base-font-color: $dark-gray;
