--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,7 @@
 @import "avatars";
 @import "comment-count";
 @import "content";
+@import "helpers";
 @import "layout";
 @import "page-header";
 @import "slice";
