--- a/app/views/pull_requests/_pull_request.html.erb
+++ b/app/views/pull_requests/_pull_request.html.erb
@@ -18,11 +18,11 @@
     </span>
   </div>
 
-  <div class="table-list-cell dummy">
+  <div class="table-list-cell dummy hide-mobile">
     <span class="tag ember">Ember</span>
   </div>
 
-  <div class="table-list-cell">
+  <div class="table-list-cell hide-mobile">
     <div class="comment-count">
       <%= embedded_svg "svg/comment.svg" %>
       <span class="dummy">1</span>
