--- a/app/assets/stylesheets/base/_grid-settings.scss
+++ b/app/assets/stylesheets/base/_grid-settings.scss
@@ -10,5 +10,6 @@
 $medium-screen: em(640);
 $large-screen: em(860);
 
+$small-screen-only: new-breakpoint(max-width $medium-screen 4);
 $medium-screen-up: new-breakpoint(min-width $medium-screen 4);
 $large-screen-up: new-breakpoint(min-width $large-screen 8);
