--- a/app/assets/stylesheets/_tags.scss
+++ b/app/assets/stylesheets/_tags.scss
@@ -1,4 +1,17 @@
-$tags: (ember: $red, design: $pink, angular: $purple);
+$tags: (
+ember: $red,
+rails: $light-blue,
+design: $pink,
+angular: $purple,
+ruby: $light-red,
+javascript: $yellow,
+ios: $darker-blue,
+objective-c: $darker-blue,
+swift: $darker-blue,
+haskell: $pink,
+android: $pink,
+code: $medium-gray,
+);
 
 .tags {
   @include display(flex);
@@ -35,6 +48,7 @@ $tags: (ember: $red, design: $pink, angular: $purple);
       background: $background-color;
     }
   }
+  margin-right: $gutter;
 }
 
 .tag-toggle {
