Add missing class

--- a/app/views/pull_requests/index.html.erb
+++ b/app/views/pull_requests/index.html.erb
@@ -35,7 +35,7 @@
     <% if grouped_pull_requests["in progress"].present? %>
       <ol class="table-list">
         <li class="table-list-item">
-          <div class="table-list-cell">
+          <div class="table-list-cell stacked">
             <h3>In Progress</h3>
             <span class="table-list-cell-subtitle">Pull Requests with some feedback</span>
           </div>
