--- a/app/assets/stylesheets/_slice.scss
+++ b/app/assets/stylesheets/_slice.scss
@@ -2,6 +2,9 @@
   @extend %margin-bottom;
   @include padding(1em null);
   background: $dark-blue;
+  border-bottom: 1px solid $darker-blue;
+  border-top: 1px solid $darker-blue;
+  box-shadow: 0 1px 2px rgba(black, 0.15);
 
   p {
     color: white;
