--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -3,6 +3,7 @@ $sans-serif: "proxima-nova-soft", $helvetica;
 $serif: $georgia;
 $base-font-family: $sans-serif;
 $header-font-family: $base-font-family;
+$decorative-font-family: "ff-prater-script-web", $base-font-family;
 
 // Font Sizes
 $base-font-size: 1em;
