--- a/app/views/pull_requests/index.html.erb
+++ b/app/views/pull_requests/index.html.erb
@@ -1,7 +1,9 @@
 <header class="page-header">
   <div class="container">
-    <h1>Beggar</h1>
-    <%= link_to "Getting Started?", page_path("setup") %>
+    <h1 class="page-header-logo">
+      <%= link_to "Beggar", root_url %>
+    </h1>
+    <%= link_to "Getting Started?", page_path("setup"), class: "page-header-nav-link" %>
   </div>
 </header>
 
