--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -3,8 +3,9 @@ body {
 }
 
 .container {
-  @include outer-container;
+  @include margin(null auto);
   @include padding(null 0.5em);
+  max-width: $max-width;
 
   @include media($medium-screen-up) {
     @include padding(null 1em);
