Add favicon, Slack icon

--- a/app/views/pages/setup.html.erb
+++ b/app/views/pages/setup.html.erb
@@ -56,7 +56,7 @@
       <h2>Contributing</h2>
       <ul>
         <li>
-          Check out the repo on <a href="https://github.com/thoughtbot/Beggar">GitHub</a>.
+          Check out the repo on <a href="https://github.com/thoughtbot/beggar">GitHub</a>.
         </li>
         <li>
           Grab a story on <a href="https://switchitup.herokuapp.com/pr-tool/stories">Switchboard</a>.
