--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <script>try{Typekit.load();}catch(e){}</script>
   <%= stylesheet_link_tag :application, media: "all" %>
   <%= csrf_meta_tags %>
+  <%= favicon_link_tag "favicon.ico" %>
 </head>
 <body>
   <%= render "flashes" -%>
