Improve color variation

--- a/app/assets/stylesheets/_tags.scss
+++ b/app/assets/stylesheets/_tags.scss
@@ -1,16 +1,16 @@
 $tags: (
-  ember: $red,
-  rails: $light-blue,
+  android: $purple,
+  angular: $lavendar,
+  code: $brown,
   design: $pink,
-  angular: $purple,
-  ruby: $red,
+  ember: $hot-pink,
+  haskell: $teal,
+  ios: $blue,
   javascript: $yellow,
-  ios: $darker-blue,
-  objective-c: $darker-blue,
-  swift: $darker-blue,
-  haskell: $pink,
-  android: $pink,
-  code: $medium-gray,
+  objective-c: $medium-gray,
+  rails: $light-blue,
+  ruby: $red,
+  swift: $orange,
 );
 
 .tags {
