--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -25,21 +25,26 @@ $base-z-index: 0;
 
 // Colors
 $blue: #2a94d6;
-$darker-blue: #293f54;
+$brown: #795548;
 $dark-blue: #344A5F;
 $dark-gray: #2e4153;
-$medium-gray: #647687;
+$darker-blue: #293f54;
+$green: #4ab471;
+$hot-pink: #e91e63;
+$lavendar: #717ecd;
+$light-blue: #4EB1CB;
 $light-gray: #edeff0;
-$lighter-gray: #f0f1f2;
+$light-green: #E6EFC2;
 $light-red: #FBE3E4;
 $light-yellow: #FFF6BF;
-$light-green: #E6EFC2;
-$light-blue: #4EB1CB; ;
-$red: #cf5C60;
-$purple: #717ecd;
-$green: #4ab471;
-$yellow: #f3ae4e;
+$lighter-gray: #f0f1f2;
+$medium-gray: #647687;
+$orange: #ff5722;
 $pink: #d96383;
+$purple: #9c27b0;
+$red: #cf5C60;
+$teal: #009688;
+$yellow: #f3ae4e;
 
 // Background Colors
 $base-background-color: white;
