--- a/app/assets/stylesheets/_tags.scss
+++ b/app/assets/stylesheets/_tags.scss
@@ -1,7 +1,7 @@
 $tags: (
-  android: $purple,
-  angular: $lavendar,
-  code: $brown,
+  android: $brown,
+  angular: $purple,
+  code: $lavendar,
   design: $pink,
   ember: $hot-pink,
   haskell: $teal,
